--- a/package.json
+++ b/package.json
@@ -1,27 +1,32 @@
 {
-  "name": "kdjconcepts",
+  "name": "styled-components-server-side-rendering",
   "version": "1.0.0",
-  "description": "",
+  "description": "React server side rendering with Styled Components",
   "main": "index.js",
   "scripts": {
-    "restart": "pm2 startOrRestart ecosystem.config.js",
-    "deploy": "pm2 deploy ecosystem.config.js production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./dist/server",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kjamison80/kdjconcepts.git"
+    "url": "https://github.com/Jobeir/styled-components-server-side-rendering"
   },
-  "author": "Kirstina Jamison",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/kjamison80/kdjconcepts/issues"
-  },
-  "homepage": "https://github.com/kjamison80/kdjconcepts#readme",
-  "dependencies": {
-    "express": "^4.16.2"
-  },
+  "author": "Dennis Brotzky <dennis@jobeir.com>",
+  "license": "MIT",
+  "homepage": "https://github.com/Jobeir/styled-components-server-side-rendering",
   "devDependencies": {
-    "pm2": "^2.10.1"
+    "babel-core": "^6.10.4",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.11.1",
+    "json-loader": "^0.5.4",
+    "webpack": "^3.8.1",
+    "webpack-node-externals": "^1.2.0"
+  },
+  "dependencies": {
+    "express": "^4.14.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "styled-components": "^2.2.4"
   }
 }
