--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.14.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "styled-components": "^2.2.4"
+    "styled-components": "^2.2.4",
+    "pm2": "^2.10.1"
   }
 }
