--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
   "name": "kdjconcepts",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "start": "node ./dist/server",
-    "build": "webpack",
-    "restart": "pm2 startOrRestart ecosystem.config.js",
-    "deploy": "pm2 deploy ecosystem.config.js production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node server.js -p $PORT",
+    "build": "next build",
+    "start": "set NODE_ENV=production;node server.js -p $PORT"
   },
   "repository": {
     "type": "git",
@@ -19,21 +15,32 @@
   "bugs": {
     "url": "https://github.com/kjamison80/kdjconcepts/issues"
   },
-  "homepage": "https://github.com/kjamison80/kdjconcepts#readme",
-  "devDependencies": {
-    "babel-core": "^6.10.4",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.11.1",
-    "json-loader": "^0.5.4",
-    "webpack": "^3.8.1",
-    "webpack-node-externals": "^1.2.0"
-  },
   "dependencies": {
+    "autoprefixer": "7.1.5",
+    "babel-plugin-module-resolver": "^2.7.1",
+    "babel-plugin-wrap-in-js": "^1.1.0",
     "express": "^4.14.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "styled-components": "^2.2.4",
-    "pm2": "^2.10.1"
+    "glob": "^7.1.2",
+    "isomorphic-unfetch": "^2.0.0",
+    "next": "5.0.0",
+    "node-sass": "^4.4.0",
+    "normalize.css": "^7.0.0",
+    "postcss-easy-import": "^3.0.0",
+    "postcss-loader": "^2.0.7",
+    "raw-loader": "^0.5.1",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
+    "sass-loader": "^6.0.6"
+  },
+  "devDependencies": {
+    "eslint": "4.9.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.4.0",
+    "nodemon": "1.11.0"
+  },
+  "engines": {
+    "node": "6.11.x"
   }
 }
