--- a/package.json
+++ b/package.json
@@ -25,13 +25,18 @@
     "glob": "^7.1.2",
     "isomorphic-unfetch": "^2.0.0",
     "next": "5.0.0",
+    "next-redux-wrapper": "^1.0.0",
     "node-sass": "^4.4.0",
     "normalize.css": "^7.0.0",
     "postcss-easy-import": "^3.0.0",
     "postcss-loader": "^2.0.7",
     "raw-loader": "^0.5.1",
     "react": "16.2.0",
+    "redux-devtools-extension": "^2.13.2",
     "react-dom": "16.2.0",
+    "react-redux": "^5.0.1",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
     "sass-loader": "^6.0.6"
   },
   "devDependencies": {
