--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "postcss-loader": "^2.0.7",
     "raw-loader": "^0.5.1",
     "react": "16.2.0",
-    "redux-devtools-extension": "^2.13.2",
+    "react-autosuggest": "^9.3.4",
     "react-dom": "16.2.0",
     "react-redux": "^5.0.1",
     "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.1.0",
     "sass-loader": "^6.0.6"
   },
