--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-autosuggest": "^9.3.4",
     "react-dom": "16.2.0",
     "react-redux": "^5.0.1",
+    "react-textfit": "^1.1.0",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.1.0",
