Made the meal selector a modal

--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "postcss-easy-import": "^3.0.0",
     "postcss-loader": "^2.0.7",
     "raw-loader": "^0.5.1",
-    "react": "16.2.0",
+    "react": "^16.2.0",
     "react-autosuggest": "^9.3.4",
+    "react-css-transition": "^0.7.4",
     "react-dom": "16.2.0",
     "react-redux": "^5.0.1",
     "react-textfit": "^1.1.0",
